   - countRevisionsBetween
   - getAuthorsBetween
* The PageProps class was converted to a service. PageProps::overrideInstance
  was removed, and MediaWikiServices::redefineService should be used
  instead.
* The $wgContLang variable, deprecated in 1.32, was removed. You can instead use
  MediaWikiServices::getInstance()->getContentLanguage().
* …

=== Deprecations in 1.36 ===
* (T245963) User::getGrantName() is now hard deprecated and will be removed in
  a subsequent release. Use MWGrants::grantName() instead.
* wfIncrStats() is now deprecated. Use MediaWikiServices::getInstance()
  ->getStatsdDataFactory()->updateCount() instead.
* WikiPage::doEditContent() is now deprecated. Use
  WikiPage::doUserEditContent() instead. Note that doEditContent() was also
  deprecated in 1.32 for unrelated reasons and doUserEditContent() is
  deprecated for other reasons, however, using doUserEditContent() is
  recommended over using doEditContent().
* WikiPage::doUserEditContent() is now deprecated. Use
  PageUpdater::saveRevision instead. Note that the new method expects callers
  to take care of checking EDIT_MINOR against the minoredit right, and to apply
  the autopatrol right as appropriate.
* LocalFile::recordUpload2, soft deprecated in 1.35, now emits deprecation
  warnings. Use ::recordUpload3 instead.
* Constructing a new instance of the ParserOptions class without providing
  a User object, which falls back to the global $wgUser, is now deprecated.
* The User class, which was marked as @newable in 1.35, is no longer newable,
  meaning that it is no longer safe to manually call the constructor via
  `new User`. Instead, use the UserFactory service. Additionally, the
  following static constructor methods were deprecated in favor of using the
  UserFactory service:
   - User::newFromName
   - User::newFromId
   - User::newFromActorId
   - User::newFromIdentity
   - User::newFromAnyId
   - User::newFromConfirmationCode